<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/educat"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="97dp"
        android:layout_gravity="left"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/head" />

    <TextView
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:backgroundTint="#0D0E0E"
        android:gravity="center"

        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/nav_header_subtitle"
        android:textColor="#302C2C"
        android:textColorHint="#705F5F"
        android:textSize="14sp"
        android:textStyle="bold|italic" />
</LinearLayout>